--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@ import { getAnalytics } from "firebase/analytics";
 
 // Your web app's Firebase configuration
 // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+// For Firebase JS SDK v7.20.0 and later, measurementId is optional
 const firebaseConfig = {
   apiKey: "AIzaSyCRQicFDI3VkQDZXXgtmI95oAP42oFyB-0",
   authDomain: "panchayat-portal.firebaseapp.com",
@@ -274,3 +275,4 @@ const analytics = getAnalytics(app);
 
 </body>
 </html>
+
